fix:framer-motion

--- a/src/content/automate-repository-generation-prisma-nestjs.mdx
+++ b/src/content/automate-repository-generation-prisma-nestjs.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Automating Repository Generation in NestJS with Prisma"
 summary: "Learn how to automate repository generation in a Prisma + NestJS application. Reduce boilerplate, ensure consistency, and speed up development with a custom repository generation script."
-type: Blog
+category: 'project'
 publishedAt: 2025-04-04
 ---
 
