--- a/src/content/elysia-uniform-response.mdx
+++ b/src/content/elysia-uniform-response.mdx
@@ -1,7 +1,8 @@
 ---
 title: "Format Uniform Response Structure in Elysia.js"
 summary: "Learn how to format the success and error response in a standard format in Elysia.js middleware to ensure consistency across the application, handle the errors gracefully, and provide the user with the necessary information."
-type: Blog
+type: project
+category: 'project'
 publishedAt: 2024-07-14
 ---
 
