--- a/src/content/es2022.mdx
+++ b/src/content/es2022.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Exciting Features in ES2022"
 summary: "Overview and examples of some exicitng features coming in ES2022."
-type: Blog
+category: 'project'
 publishedAt: 2022-03-28
 ---
 
