--- a/src/content/integrate-react-quill-with-antd-forms.mdx
+++ b/src/content/integrate-react-quill-with-antd-forms.mdx
@@ -2,6 +2,7 @@
 title: "Integrating React Quill Editor with Ant Design Forms"
 summary: "Integrate rich text editor react-quill with popular React UI framework Ant Design."
 publishedAt: 2021-01-13
+category: 'project'
 ---
 
 Ant design [docs](https://ant.design/docs/react/recommendation) recommends the react-quill editor as the rich text editor to be integrated with the ant design forms.
