--- a/src/content/nestjs-sendgrid-email-service.mdx
+++ b/src/content/nestjs-sendgrid-email-service.mdx
@@ -1,7 +1,8 @@
 ---
 title: "Create Email Service in NestJS with Sendgrid, MJML and Handlebars"
 summary: "Create email service in Nest.js using MJML for responsive email template and handlebars for dynamic email content, and send email using Sendgrid (Twilio)."
-type: Blog
+type: project
+category: 'project'
 publishedAt: 2024-06-01
 ---
 
