--- a/src/content/nextjs-four-caching-layers.mdx
+++ b/src/content/nextjs-four-caching-layers.mdx
@@ -1,7 +1,8 @@
 ---
 title: "Dissecting Four Layers of Caching in Next.js"
 summary: "In depth overview of four levels of caching mechanisms in Next.js 14 (app router): Request Memoization, Data Cache, Full Route Cache and Router Cache."
-type: Blog
+type: project
+category: 'project'
 publishedAt: 2024-05-19
 ---
 
