--- a/src/content/react-lists-reconciliation.mdx
+++ b/src/content/react-lists-reconciliation.mdx
@@ -2,6 +2,7 @@
 title: "Reconciliation in React's Lists"
 summary: "In depth overview of how reconciliation works with lists in React and how can we use key attribute to prevent unnecessary re-render."
 publishedAt: 2021-07-15
+category: 'project'
 ---
 
 <Image
