--- a/src/content/redux-toolkit.mdx
+++ b/src/content/redux-toolkit.mdx
@@ -1,9 +1,8 @@
----
 title: "Redux Toolkit - Better way of writing Redux"
 type: Blog
 summary: "Learn how to use Redux toolkit - next generation tools for building the apps with react-redux."
+category: 'project'
 publishedAt: 2020-11-20
----
 
 I've been using Redux for managing and updating the global state in my React apps for a while. Redux makes it way easier to manage the gobal state and automatically implements complex performance optimizations, so that your own component only re-renders when the data it needs has actually changed ; the major complaint about the React-Redux is **
 boilerplate**. 🍽️
