--- a/src/content/trpc-file-upload-aws-s3.mdx
+++ b/src/content/trpc-file-upload-aws-s3.mdx
@@ -3,6 +3,7 @@ title: "tRPC File Uploads to AWS S3 with Next.js"
 type: Blog
 summary: "Upload files and images to an AWS S3 bucket via pre-signed url using tRPC and Next.js. This guide covers AWS setup, tRPC API integration, and image uploader component implementation in Next.js."
 publishedAt: 2025-02-02
+category: 'project'
 ---
 
 In this blog post, we'll walk through the process of uploading files and images to an Amazon S3 bucket using tRPC and Next.js.
