--- a/src/content/aws-s3-nestjs.mdx
+++ b/src/content/aws-s3-nestjs.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Integrate AWS S3 with NestJS for private and public files storage"
 summary: "Store private and public files in single S3 bucket, generate pre-signed URLs for private files using NestJS and AWS SDK v3. Also, perform CRUD operations on S3 objects using NestJS."
-type: Blog
+category: 'project'
 publishedAt: 2024-05-05
 ---
 
