--- a/src/content/husky-commitlint-lint-staged.mdx
+++ b/src/content/husky-commitlint-lint-staged.mdx
@@ -2,6 +2,7 @@
 title: "Pre-commit hooks with husky v6, commitlint and lint-staged"
 summary: "In this guide we will learn how to enforce commit conventions in your project running pre-commit checks."
 publishedAt: 2021-04-06
+category: 'project'
 ---
 
 ### Commit Conventions
