--- a/src/content/role-based-auth-with-react-router-v6.mdx
+++ b/src/content/role-based-auth-with-react-router-v6.mdx
@@ -2,6 +2,7 @@
 title: "Role Based Authorization with React Router v6 and Typescript"
 summary: "Building auth route in react router v6 with role based authorization."
 publishedAt: 2021-07-01
+category: 'project'
 ---
 
 <Image
